--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 		<title>Barfy</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="https://code.responsivevoice.org/responsivevoice.js"></script>
-		</script>
+		<script src="/js/main.js"></script>
 	</head>
 
 	<body>
-		<h1>Barfy zone</h1>
+		<h1>Barfy zone <small></small></h1>
+
 		<audio id="aguanta" preload="true">
 			<source  src="http://barfy.surge.sh/assets/audio/aguanta.mp3" type="audio/mpeg">
 		</audio>
@@ -39,57 +40,5 @@
 		</audio>
 
 
-		<script type="text/javascript">
-			var currentVersion;
-
-			$(function () {
-				$.getJSON('/package.json', function (data) {
-					currentVersion = data.version;
-					setupConnection();
-				});
-			});
-
-			function setupConnection () {
-				var HOST = 'wss://barfy-server.herokuapp.com',
-					ws = new WebSocket(HOST);
-
-				ws.onmessage = function (event) {
-					var data = JSON.parse(event.data),
-						action = data.action,
-						value = data.value,
-						element = $('audio#' + value);
-
-					if (action === 'stop') {
-						$('audio').each(function(i, v) {
-							v.pause();
-							v.currentTime = 0;
-						})
-					}
-
-					if (action === 'announce') {
-						$('audio#chime-in')[0].play();
-						setTimeout(function () {
-							responsiveVoice.speak(value, "Spanish Latin American Female");
-						}, 1900);
-					};
-
-					if(element.length) {
-						element[0].play();
-					}
-				};
-
-				ws.onclose = function (event) {
-					setupConnection();
-				}
-			}
-
-			setInterval(function () {
-				$.getJSON('/package.json', function (data) {
-					if (data.version !== currentVersion) {
-						window.location.reload();
-					}
-				});
-			}, 60 * 1 * 1000);
-		</script>
 	</body>
 </html>
