--- a/index.html
+++ b/index.html
@@ -7,38 +7,10 @@
 		<script src="https://code.responsivevoice.org/responsivevoice.js"></script>
 		<script src="/js/main.js"></script>
 	</head>
-
 	<body>
-		<h1>Barfy zone <small></small></h1>
-
-		<audio id="aguanta" preload="true">
-			<source  src="http://barfy.surge.sh/assets/audio/aguanta.mp3" type="audio/mpeg">
-		</audio>
-
-		<audio id="botellero" preload="true">
-			<source  src="http://barfy.surge.sh/assets/audio/botellero.mp3" type="audio/mpeg">
-		</audio>
-
-		<audio id="dale-ingrid" preload="true">
-			<source  src="http://barfy.surge.sh/assets/audio/dale-ingrid.mp3" type="audio/mpeg">
-		</audio>
-
-		<audio id="wololo" preload="true">
-			<source  src="http://barfy.surge.sh/assets/audio/wololo.mp3" type="audio/mpeg">
-		</audio>
-
-		<audio id="chime-in" preload="true">
-			<source  src="http://barfy.surge.sh/assets/audio/chime-in.mp3" type="audio/mpeg">
-		</audio>
-
-		<audio id="me-gusta-el-arte" preload="true">
-			<source  src="http://barfy.surge.sh/assets/audio/me-gusta-el-arte.mp3" type="audio/mpeg">
-		</audio>
-
-		<audio id="me-gusta-liniers" preload="true">
-			<source  src="http://barfy.surge.sh/assets/audio/me-gusta-liniers.mp3" type="audio/mpeg">
-		</audio>
-
-
+		<header>
+			<h1 style="display: inline">Barfy zone</h1>
+			<small></small>
+		</header>
 	</body>
 </html>
