--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header>
-			<h1 style="display: inline">Barfy zone Nalgon</h1>
+			<h1 style="display: inline">Barfy zone</h1>
 			<small></small>
 		</header>
 	</body>
